--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "broccoli-funnel": "^2.0.1",
     "chalk": "^2.3.1",
     "ember-cli-babel": "^6.6.0",
-    "ember-cli-htmlbars": "^2.0.1"
+    "ember-cli-htmlbars": "^2.0.1",
+    "ember-lodash": "^4.18.0"
   },
   "devDependencies": {
     "bootstrap": "^4.0.0-beta.2",
