--- a/package.json
+++ b/package.json
@@ -34,57 +34,57 @@
     "broccoli-funnel": "^2.0.1",
     "broccoli-merge-trees": "^3.0.0",
     "camelcase": "^5.0.0",
-    "chalk": "^2.3.1",
-    "ember-cli-babel": "^6.6.0",
+    "chalk": "^2.4.1",
+    "ember-cli-babel": "^6.14.1",
     "ember-cli-htmlbars": "^2.0.1",
     "handlebars": "^4.0.11",
     "strip-indent": "^2.0.0"
   },
   "devDependencies": {
-    "bootstrap": "^4.0.0-beta.2",
-    "broccoli-asset-rev": "^2.4.5",
-    "ember-ajax": "^3.0.0",
+    "bootstrap": "^4.1.1",
+    "broccoli-asset-rev": "^2.7.0",
+    "ember-ajax": "^3.1.0",
     "ember-cli": "~3.1.4",
     "ember-cli-autoprefixer": "^0.8.1",
-    "ember-cli-dependency-checker": "^2.0.0",
+    "ember-cli-dependency-checker": "^2.1.1",
     "ember-cli-deploy": "^1.0.2",
     "ember-cli-deploy-build": "^1.1.1",
     "ember-cli-deploy-display-revisions": "^1.0.0",
     "ember-cli-deploy-gzip": "^1.0.1",
     "ember-cli-deploy-manifest": "^1.1.0",
     "ember-cli-deploy-revision-data": "^1.0.0",
-    "ember-cli-deploy-s3": "^1.2.0",
+    "ember-cli-deploy-s3": "^1.3.0",
     "ember-cli-deploy-s3-index": "^1.0.1",
-    "ember-cli-dotenv": "^2.0.0",
-    "ember-cli-eslint": "^4.2.1",
+    "ember-cli-dotenv": "^2.1.0",
+    "ember-cli-eslint": "^4.2.3",
     "ember-cli-fastboot": "^1.1.3",
-    "ember-cli-flash": "^1.6.1",
-    "ember-cli-htmlbars-inline-precompile": "^1.0.0",
+    "ember-cli-flash": "^1.6.4",
+    "ember-cli-htmlbars-inline-precompile": "^1.0.3",
     "ember-cli-inject-live-reload": "^1.4.1",
     "ember-cli-qunit": "^4.3.2",
-    "ember-cli-sass": "^7.1.2",
+    "ember-cli-sass": "^7.2.0",
     "ember-cli-shims": "^1.2.0",
     "ember-cli-sri": "^2.1.0",
-    "ember-cli-uglify": "^2.0.0",
-    "ember-code-snippet": "^2.0.0",
-    "ember-composable-helpers": "^2.0.3",
+    "ember-cli-uglify": "^2.1.0",
+    "ember-code-snippet": "^2.2.1",
+    "ember-composable-helpers": "^2.1.0",
     "ember-disable-prototype-extensions": "^1.1.2",
     "ember-export-application-global": "^2.0.0",
-    "ember-google-maps-sample-addon": "sandydoo/ember-google-maps-sample-addon",
-    "ember-load-initializers": "^1.0.0",
+    "ember-google-maps-sample-addon": "github:sandydoo/ember-google-maps-sample-addon",
+    "ember-load-initializers": "^1.1.0",
     "ember-maybe-import-regenerator": "^0.1.6",
-    "ember-resolver": "^4.0.0",
+    "ember-resolver": "^4.5.6",
     "ember-source": "~3.1.0",
-    "ember-source-channel-url": "^1.0.1",
+    "ember-source-channel-url": "^1.1.0",
     "ember-try": "^0.2.23",
     "eslint-config-simplabs": "^0.4.0",
     "eslint-plugin-disable-features": "^0.1.3",
-    "eslint-plugin-ember": "^3.6.2",
+    "eslint-plugin-ember": "^5.2.0",
     "eslint-plugin-node": "^6.0.1",
-    "eslint-plugin-qunit": "^2.4.0",
-    "loader.js": "^4.2.3",
-    "prember": "^0.2.2",
-    "prember-sitemap-generator": "0.0.3"
+    "eslint-plugin-qunit": "^3.2.1",
+    "loader.js": "^4.7.0",
+    "prember": "^0.4.0",
+    "prember-sitemap-generator": "0.1.1"
   },
   "engines": {
     "node": "6.* || >= 8.*"
